// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css composes 1`] = `"css-cls1-vyoujf-va5xsk css-cls1-vyoujf"`;

exports[`css composes 2`] = `"css-cls2-1qb2ovg-1em6aur css-cls2-1qb2ovg css-cls1-vyoujf-va5xsk css-cls1-vyoujf"`;

exports[`css composes 3`] = `
".css-cls1-vyoujf-va5xsk { display: -webkit-box; display: -moz-box; display: -ms-flexbox; display: -webkit-flex; display: flex; }.css-cls2-1qb2ovg-1em6aur {
      -webkit-justify-content: center;
      -ms-flex-pack: center;
      -webkit-box-pack: center;
      justify-content: center; }"
`;

exports[`css composes with objects 1`] = `"css-ykfdbj css-1qapmd5 css-gtqhte css-7g5nlp css-1co2by6 css-1mc3mx5 css-wnks91 css-ak1dl4"`;

exports[`css composes with objects 2`] = `"css-cls2-1qb2ovg-1em6aur css-cls2-1qb2ovg css-ykfdbj css-1qapmd5 css-gtqhte css-7g5nlp css-1co2by6 css-1mc3mx5 css-wnks91 css-ak1dl4"`;

exports[`css composes with objects 3`] = `
".css-cls1-vyoujf-va5xsk { display: -webkit-box; display: -moz-box; display: -ms-flexbox; display: -webkit-flex; display: flex; }.css-cls2-1qb2ovg-1em6aur {
      -webkit-justify-content: center;
      -ms-flex-pack: center;
      -webkit-box-pack: center;
      justify-content: center; }.css-ykfdbj{display:flex}.css-1qapmd5{display:block}.css-gtqhte{width:30px}.css-7g5nlp{height:calc(40vw - 50px)}.css-1co2by6:hover{color:blue}.css-1mc3mx5:after{content:\\" \\"}.css-wnks91:after{color:red}@media(min-width: 420px){.css-ak1dl4{color:green}}"
`;

exports[`css handles objects 1`] = `"css-ykfdbj"`;
